--- a/src/styles/components/features/BlogView.css
+++ b/src/styles/components/features/BlogView.css
@@ -5,11 +5,7 @@
     align-items: center;
     margin: auto;
     gap: 2rem;
-    background: linear-gradient(
-        to bottom,
-        var(--background-color),
-        var(--accent-dark)
-    );
+    background-color: var(--background-color);
     padding-top: 2rem;
     padding-bottom: 2rem;
 
