--- a/src/styles/pages/BlogPost.css
+++ b/src/styles/pages/BlogPost.css
@@ -17,7 +17,7 @@
         align-items: center;
         gap: 1rem;
         padding: 2rem;
-        width: 50rem;
+        width: 60rem;
         max-width: 100%;
     }
 
